# DjangoRESTAPI-Pattern

./: .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: test_lint.yml
configs/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
configs/management/commands/: wait_for_db.py
users/: admin.py
users/api/v1/: routers.py
users/migrations/: 0001_initial.py
users/services/: __init__.py  user_create.py  user_creator.py
users/tests/: factories.py
